src/test/ui/parser/issue-63116.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-63116.rs:3:18
   |
LL | impl W <s(f;Y(;]
   |          -       ^
   |          |
   |          unclosed delimiter

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `;`
  --> $DIR/issue-63116.rs:3:12
   |
LL | impl W <s(f;Y(;]
   |            ^ expected one of 7 possible tokens

error: expected one of `!`, `&&`, `&`, `(`, `)`, `*`, `+`, `,`, `->`, `...`, `::`, `:`, `<`, `=`, `>`, `?`, `[`, `_`, `async`, `const`, `dyn`, `extern`, `fn`, `for`, `impl`, `unsafe`, lifetime, or path, found `;`
  --> $DIR/issue-63116.rs:3:15
   |
LL | impl W <s(f;Y(;]
   |              -^ help: `)` may belong here
   |              |
   |              unclosed delimiter

error: aborting due to 3 previous errors

